--- a/css/style.css
+++ b/css/style.css
@@ -441,10 +441,8 @@ body {
     animation: burger-inactive 2000ms ease-in-out;
  }
  .burger-img[data-burger="active"] {
-    transform: scale(0.95);
-    transition: transform 2000ms ease-in;
     animation: burger-animation 3000ms 
-    ease-in-out 3000ms infinite;
+    ease-in-out 2000ms infinite, burger-animation-start 2000ms ease-in;
    
  }
 
@@ -463,6 +461,10 @@ body {
 @keyframes burger-inactive {
     from {transform: scale(1); opacity: 1;}
     to {transform: scale(0); opacity: 0;}
+}
+@keyframes burger-animation-start {
+    from {transform: scale(0);}
+    to {transform: scale(0.95);}
 }
 
  @keyframes burger-animation {
